PN-16572 - WI 4 - Implementazione API Creazione Copertura
